# graphed-histogram-mvp

./: CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
.graphed/: state.json
.graphed/M23/: attempts.md
.graphed/M29/: attempts.md
docs/: api.rst  conf.py  design.rst  improvements.rst  index.rst
src/graphed_histogram/: __init__.py  _spec.py  boost.py
tests/frozen/m23/: README.md  behavior_toy.py  test_deferred_histograms.py  test_process_executor_witnesses.py
tests/frozen/m29/: test_multi_weight_fills.py
