[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphed-histogram"
version = "0.0.1"
description = "Deferred boost-histogram/hist filling on graphed task graphs (the dask-histogram analogue)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "graphed-org" }]
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
# graphed-core: the DurablePlan + content-addressed task_id (from git). cloudpickle: resolve opaque
# OpSpecs at execution time (the only non-IR-expressible callables a plan can carry).
dependencies = ["graphed-core", "graphed", "boost-histogram>=1.4", "numpy>=1.24"]

[project.optional-dependencies]
# the backends + corpus + exec-local exercise resume on a realistic HEP analysis end-to-end.
dev = [
  "pytest",
  "pytest-cov",
  "hypothesis",
  "mypy",
  "ruff",
  "graphed-numpy",
  "graphed-exec-local",
  "hist>=2.7",
]
docs = ["sphinx", "furo"]

[project.urls]
Homepage = "https://github.com/graphed-org/graphed-checkpoint-mvp"

[tool.hatch.build.targets.wheel]
packages = ["src/graphed_histogram"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.coverage.run]
branch = true
source = ["graphed_histogram"]

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.ruff]
line-length = 110
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF", "PLC0415"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
# boost_histogram ships no py.typed: the deferred Histogram subclasses an Any base deliberately
disallow_subclassing_any = false

[[tool.mypy.overrides]]
module = ["numpy.*", "boost_histogram.*", "awkward.*", "graphed_numpy.*", "graphed_exec_local.*", "hist.*"]
ignore_missing_imports = true
follow_imports = "skip"
